--- a/application.yaml
+++ b/application.yaml
@@ -15,3 +15,9 @@ okta:
 spring:
   zipkin:
     base-url: http://zipkin-svc:9411
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+
