--- a/application.yaml
+++ b/application.yaml
@@ -20,4 +20,7 @@ management:
   tracing:
     sampling:
       probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://zipkin-svc:9411/api/v2/spans
 
